--- a/src/defaultV2-theme/blocks/animations.scss
+++ b/src/defaultV2-theme/blocks/animations.scss
@@ -18,14 +18,32 @@
 @keyframes moveInWithOverflow {
   from {
     overflow: hidden;
-    height: 0;
+    height: var(--animation-height-from);
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    border-top-width: 0;
+    border-bottom-width: 0;
   }
   99% {
     overflow: hidden;
-    height: var(--animation-height);
+    margin-top: var(--animation-margin-top);
+    margin-bottom: var(--animation-margin-bottom);
+    padding-top: var(--animation-padding-top);
+    padding-bottom: var(--animation-padding-bottom);
+    border-top-width: var(--animation-border-top-width);
+    border-bottom-width: var(--animation-border-bottom-width);
+    height: var(--animation-height-to);
   }
   to {
     overflow: visible;
+    margin-top: var(--animation-margin-top);
+    margin-bottom: var(--animation-margin-bottom);
+    padding-top: var(--animation-padding-top);
+    padding-bottom: var(--animation-padding-bottom);
+    border-top-width: var(--animation-border-top-width);
+    border-bottom-width: var(--animation-border-bottom-width);
     height: var(--animation-height);
   }
 }
