--- a/src/defaultV2-theme/blocks/sd-row.scss
+++ b/src/defaultV2-theme/blocks/sd-row.scss
@@ -3,37 +3,31 @@
   flex-direction: row;
   width: 100%;
   box-sizing: border-box;
-  --animate-margin: var(--sd-base-vertical-padding);
   margin-top: var(--sd-base-vertical-padding);
 }
 
 .sd-row.sd-page__row {
   margin-top: calcSize(2);
-  --animate-margin: #{calcSize(2)};
 }
 
 .sd-page__row.sd-row--compact {
   margin-top: var(--sd-base-vertical-padding);
-  --animate-margin: var(--sd-base-vertical-padding);
 }
 
 .sd-row:first-of-type {
   margin-top: 0;
-  --animate-margin: 0;
 }
 
 .sd-page__title,
 .sd-page__description {
   & ~ .sd-row.sd-page__row:not(.sd-row--compact) {
     margin-top: calcSize(3);
-    --animate-margin: #{calcSize(3)};
   }
 
   & ~ .sd-page__row.sd-row--compact {
     margin-top: var(--sd-base-vertical-padding);
-    --animate-margin: var(--sd-base-vertical-padding);
   }
-  & ~ .sd-page__row.sd-row.sd-row--fade-in.sd-row--fade-in {
+  & ~ .sd-page__row.sd-row.sd-row--enter.sd-row-delayed-enter {
     margin-top: 0;
   }
 }
@@ -41,9 +35,8 @@
 .sd-row.sd-page__row:not(.sd-row--compact) {
   & ~ .sd-row.sd-page__row:not(.sd-row--compact) {
     margin-top: calcSize(2);
-    --animate-margin: #{calcSize(2)};
   }
-  & ~ .sd-page__row.sd-row.sd-row--fade-in.sd-row--fade-in {
+  & ~ .sd-page__row.sd-row.sd-row--enter.sd-row-delayed-enter {
     margin-top: 0;
   }
 }
@@ -63,7 +56,7 @@
   }
 }
 .sd-panel.sd-panel--as-page {
-  &>.sd-panel__content>.sd-row--multiple:not(.sd-row--compact) {
+  & > .sd-panel__content > .sd-row--multiple:not(.sd-row--compact) {
     margin-left: calcSize(-2);
     width: calc(100% + var(--base-unit) * 2);
   }
@@ -109,21 +102,12 @@
   white-space: nowrap;
 }
 
-@keyframes marginFadeIn {
-  from {
-    margin-top: 0;
-  }
-
-  to {
-    margin-top: var(--animate-margin);
-  }
-}
-.sd-row.sd-row--fade-in {
+.sd-row.sd-row--enter {
   margin-top: 0;
 }
-.sd-row--fade-in {
+.sd-row--enter {
   animation-fill-mode: forwards;
-  animation-name: fadeIn, moveInWithOverflow, marginFadeIn;
+  animation-name: fadeIn, moveInWithOverflow;
   min-height: 0 !important;
   opacity: 0;
   height: 0;
@@ -131,12 +115,13 @@
   animation-delay: $row-fade-in-delay, 0s, 0s;
   animation-duration: $row-fade-in-duration, $row-move-in-duration, $row-move-in-duration;
 }
-.sd-row--delayed-fade-in {
-  animation-delay: calc(#{$row-fade-in-delay} + #{$row-fade-in-animation-delay}), $row-fade-in-animation-delay, $row-fade-in-animation-delay;
+.sd-row--delayed-enter {
+  animation-delay: calc(#{$row-fade-in-delay} + #{$row-fade-in-animation-delay}), $row-fade-in-animation-delay,
+    $row-fade-in-animation-delay;
 }
 
-.sd-row--fade-out {
-  animation-name: fadeIn, moveInWithOverflow, marginFadeIn;
+.sd-row--leave {
+  animation-name: fadeIn, moveInWithOverflow;
   animation-timing-function: $reverse-ease-out;
   animation-fill-mode: forwards;
   animation-direction: reverse;
@@ -145,10 +130,10 @@
   animation-duration: $row-fade-out-duration, $row-move-out-duration, $row-move-out-duration;
 }
 
-.sd-row--fade-in .sd-element-wrapper--fade-in {
+.sd-row--enter .sd-element-wrapper--enter {
   animation: none;
 }
 
-.sd-row--fade-out .sd-element-wrapper--fade-out {
+.sd-row--leave .sd-element-wrapper--leave {
   animation: none;
 }
