--- a/packages/survey-angular-ui/src/components/matrix-actions/drag-drop-icon/drag-drop-icon.component.html
+++ b/packages/survey-angular-ui/src/components/matrix-actions/drag-drop-icon/drag-drop-icon.component.html
@@ -1,6 +1,8 @@
 <ng-template #template>
-  <svg *ngIf="question.iconDragElement" [class]="question.cssClasses.dragElementDecorator">
-    <use [attr.xlink:href]="question.iconDragElement"></use>
-  </svg>
-  <span *ngIf="!question.iconDragElement" data-bind="css: question.cssClasses.iconDrag"></span>
+  <div>
+    <svg *ngIf="question.iconDragElement" [class]="question.cssClasses.dragElementDecorator">
+      <use [attr.xlink:href]="question.iconDragElement"></use>
+    </svg>
+    <span *ngIf="!question.iconDragElement" data-bind="css: question.cssClasses.iconDrag"></span>
+  </div>
 </ng-template>
