--- a/src/knockout/components/matrix-actions/drag-drop-icon/drag-drop-icon.html
+++ b/src/knockout/components/matrix-actions/drag-drop-icon/drag-drop-icon.html
@@ -1,8 +1,10 @@
-<!-- ko if: question.iconDragElement -->
-<svg data-bind="css: question.cssClasses.dragElementDecorator">
-  <use data-bind="attr: { 'xlink:href': question.iconDragElement }" xlink:href=''></use>
-</svg>
-<!-- /ko -->
-<!-- ko ifnot: question.iconDragElement -->
-<span data-bind="css: question.cssClasses.iconDrag"></span>
-<!-- /ko -->
+<div>
+  <!-- ko if: question.iconDragElement -->
+  <svg data-bind="css: question.cssClasses.dragElementDecorator">
+    <use data-bind="attr: { 'xlink:href': question.iconDragElement }" xlink:href=''></use>
+  </svg>
+  <!-- /ko -->
+  <!-- ko ifnot: question.iconDragElement -->
+  <span data-bind="css: question.cssClasses.iconDrag"></span>
+  <!-- /ko -->
+</div>
