--- a/src/knockout/templates/question-comment.html
+++ b/src/knockout/templates/question-comment.html
@@ -1,6 +1,6 @@
 ﻿<script type="text/html" id="survey-question-comment">
 <!--ko if: !question.isReadOnlyRenderDiv() -->
-  <!-- ko component: { name: 'sv-text-area', params: question.getTextArea() } -->
+  <!-- ko component: { name: 'sv-text-area', params: question.textAreaModel } -->
   <!-- /ko -->
   <!-- ko if: question.getMaxLength() -->
   <!-- ko component: { name: 'sv-character-counter', params: { counter: question.characterCounter, remainingCharacterCounter: question.cssClasses.remainingCharacterCounter } } -->
