fixed checkboxes adaptifity Fixed https://github.com/surveyjs/service/issues/2255

--- a/src/defaultV2-theme/blocks/sd-question.scss
+++ b/src/defaultV2-theme/blocks/sd-question.scss
@@ -122,6 +122,7 @@
   display: inline-block;
   flex: 1;
   margin-top: calc(0.25 * var(--sd-base-vertical-padding)) 0;
+  max-width: 100%;
 }
 
 .sd-element--with-frame > .sd-question__content--left {
