--- a/src/default-styles.scss
+++ b/src/default-styles.scss
@@ -545,10 +545,11 @@ f-panel {
 
 .sv-ranking-item__icon-container {
   left: 0;
-  top: 0;
+  top: 5px;
   bottom: 0;
   width: calc(3 * var(--base-unit, 8px));
   flex-shrink: 0;
+  align-items: self-start;
 
   svg:nth-of-type(1) {
     height: 16px;
