work for the https://github.com/surveyjs/survey-library/issues/7358

--- a/src/common-styles/sv-ranking.scss
+++ b/src/common-styles/sv-ranking.scss
@@ -126,6 +126,7 @@
   word-break: break-all;
   align-self: self-start;
   padding-top: calcSize(1);
+  padding-bottom: calcSize(1);
 
   .sv-string-viewer {
     overflow: initial;
