fixed column width for imagepicker https://github.com/surveyjs/service/issues/2255

--- a/src/defaultV2-theme/blocks/sd-imagepicker.scss
+++ b/src/defaultV2-theme/blocks/sd-imagepicker.scss
@@ -132,6 +132,10 @@
   align-items: flex-start;
   padding-right: 0;
 
+  &.sd-selectbase__column {
+    min-width: 0;
+  }
+  
   .sd-imagepicker__item {
     width: 100%;
   }
