--- a/packages/survey-angular-ui/src/questions/comment.component.html
+++ b/packages/survey-angular-ui/src/questions/comment.component.html
@@ -12,6 +12,8 @@
 (input)="model.onInput($event)"
 (keydown)="model.onKeyDown($event)"
 (change)="onChange($event)"
+(focus)="model.onFocus($event)"
+(blur)="model.onBlur($event)"
 [attr.aria-required]="model.a11y_input_ariaRequired"
 [attr.aria-label]="model.a11y_input_ariaLabel"
 [attr.aria-labelledby]="model.a11y_input_ariaLabelledBy"
