--- a/src/common-styles/sv-ranking.scss
+++ b/src/common-styles/sv-ranking.scss
@@ -10,7 +10,6 @@
 .sv-ranking-item {
   cursor: pointer;
   position: relative;
-  height: calcSize(6);
   opacity: 1;
 }
 
@@ -52,11 +51,12 @@
 .sv-ranking-item__icon-container {
   position: relative;
   left: 0;
-  top: 0;
+  top: 5px;
   bottom: 0;
   flex-shrink: 0;
   width: calcSize(3);
   height: calcSize(4);
+  align-self: flex-start;
 }
 
 .sv-ranking-item--disabled.sv-ranking-item--disabled,
@@ -103,6 +103,7 @@
     outline $transition-duration,
     background $transition-duration;
   outline: calcSize(0.25) solid transparent;
+  align-self: self-start;
 
   svg {
     fill: $font-questiontitle-color;
@@ -121,6 +122,16 @@
   font-size: $font-editorfont-size;
   line-height: multiply(1.5, $font-editorfont-size);
   margin: 0 calcSize(2);
+  overflow-wrap: break-word;
+  word-break: break-all;
+  align-self: self-start;
+  padding-top: calcSize(1);
+  padding-bottom: calcSize(1);
+
+  .sv-string-viewer {
+    overflow: initial;
+    white-space: pre-line;
+  }
 }
 
 .sd-ranking--disabled .sv-ranking-item__text {
@@ -162,6 +173,14 @@
 [dir="rtl"] .sv-ranking-item__ghost {
   left: initilal;
   right: calcSize(5);
+}
+
+.sv-ranking-item--ghost {
+  height: calcSize(6);
+
+  .sv-ranking-item__text .sv-string-viewer {
+    white-space: unset;
+  }
 }
 
 .sv-ranking-item--ghost .sv-ranking-item__ghost {
@@ -258,6 +277,17 @@
   box-shadow: var(--sjs-shadow-medium, 0px 2px 6px 0px rgba(0, 0, 0, 0.1)), var(--sjs-shadow-large, 0px 8px 16px 0px rgba(0, 0, 0, 0.1));
   background-color: var(--sjs-general-backcolor, var(--background, #fff));
   font-family: var(--sjs-font-family, var(--font-family, var(--sjs-default-font-family)));
+
+  .sv-ranking-item {
+    height: calcSize(6);
+
+    .sv-ranking-item__text {
+      .sv-string-viewer {
+        overflow: hidden;
+        white-space: nowrap;
+      }
+    }
+  }
 }
 
 .sv-ranking--select-to-rank {
@@ -282,7 +312,6 @@
 }
 
 .sv-ranking-item--animate-item-removing {
-  --animation-height: #{calcSize(6)};
   animation-name: moveIn, fadeIn;
   animation-direction: reverse;
   animation-fill-mode: forwards;
@@ -292,7 +321,6 @@
 }
 
 .sv-ranking-item--animate-item-adding {
-  --animation-height: #{calcSize(6)};
   animation-name: moveIn, fadeIn;
   opacity: 0;
   animation-fill-mode: forwards;
@@ -303,7 +331,6 @@
 
 
 .sv-ranking-item--animate-item-adding-empty {
-  --animation-height: #{calcSize(6)};
   animation-name: fadeIn;
   opacity: 0;
   animation-timing-function: linear;
@@ -312,7 +339,6 @@
 }
 
 .sv-ranking-item--animate-item-removing-empty {
-  --animation-height: #{calcSize(6)};
   animation-name: fadeIn;
   animation-direction: reverse;
   animation-timing-function: linear;
