#8638 - change box sizing for test

--- a/packages/survey-core/src/defaultV2-theme/defaultV2.scss
+++ b/packages/survey-core/src/defaultV2-theme/defaultV2.scss
@@ -1,5 +1,5 @@
 *, ::after, ::before {
-  box-sizing: initial;
+  box-sizing: border-box;
 }
 @import "./fonts.scss";
 @import "./defaultV2.fontless.scss";
