--- a/packages/survey-core/src/defaultV2-theme/blocks/sd-dropdown.scss
+++ b/packages/survey-core/src/defaultV2-theme/blocks/sd-dropdown.scss
@@ -76,6 +76,7 @@
   justify-content: center;
   align-items: center;
   padding-inline-end: calcSize(0.5);
+  box-sizing: content-box;
 }
 
 .sd-dropdown_chevron-button-svg,
