#8638 fix table cells Fixes #8638

--- a/packages/survey-core/src/defaultV2-theme/blocks/sd-table.scss
+++ b/packages/survey-core/src/defaultV2-theme/blocks/sd-table.scss
@@ -17,6 +17,7 @@
   border-left: none;
   border-right: none;
   background-clip: padding-box;
+  box-sizing: content-box;
 }
 
 .sd-table.sd-table--columnsautowidth {
