#8638 - fixed signature, popup overlay, popup icons, tagbox icons, multiple text

--- a/packages/survey-core/src/common-styles/sv-popup.scss
+++ b/packages/survey-core/src/common-styles/sv-popup.scss
@@ -146,6 +146,7 @@ sv-popup {
     width: 100%;
     padding-top: calcSize(2);
     border: unset;
+    box-sizing: content-box;
   }
 
   .sv-popup__body-content {
