#8638 Tailwind CSS, bootstrap and other CSS frameworks Fixes #8638

--- a/packages/survey-core/src/common-styles/window.scss
+++ b/packages/survey-core/src/common-styles/window.scss
@@ -52,6 +52,7 @@
         border-radius: calcSize(1);
         display: flex;
         background-color: $background-dim;
+        box-sizing: content-box;
     }
 
     .sv_window_content {
