--- a/packages/survey-core/src/defaultV2-theme/blocks/sd-progress-buttons.scss
+++ b/packages/survey-core/src/defaultV2-theme/blocks/sd-progress-buttons.scss
@@ -78,6 +78,7 @@
       line-height: calcLineHeight(1);
       justify-content: center;
       color: $background-dim;
+      box-sizing: content-box;
 
       .sd-progress-buttons__button-background {
         position: absolute;
