#8638 fix popups (scrolling) Fixes #8638

--- a/packages/survey-core/src/default-styles.scss
+++ b/packages/survey-core/src/default-styles.scss
@@ -1248,6 +1248,7 @@ sv-popup {
   overflow: auto;
   display: flex;
   flex-direction: column;
+  box-sizing: content-box;
 }
 
 .sv-popup__scrolling-content::-webkit-scrollbar {
