#8638 setting for testing in preact Fixes #8638

--- a/packages/survey-core/src/defaultV2-theme/defaultV2.fontless.scss
+++ b/packages/survey-core/src/defaultV2-theme/defaultV2.fontless.scss
@@ -116,6 +116,7 @@ body {
 
 .sv-popup .sv-popup__scrolling-content {
   @include scrollRules;
+  box-sizing: content-box;
 }
 
 @mixin stickyHeader {
