--- a/packages/survey-core/src/common-styles/sv-ranking.scss
+++ b/packages/survey-core/src/common-styles/sv-ranking.scss
@@ -123,7 +123,7 @@
   line-height: multiply(1.5, $font-editorfont-size);
   margin: 0 calcSize(2);
   overflow-wrap: break-word;
-  word-break: break-all;
+  word-break: normal;
   align-self: self-start;
   padding-top: calcSize(1);
   padding-bottom: calcSize(1);
