work for the https://github.com/surveyjs/survey-library/issues/8680

--- a/packages/survey-core/src/common-styles/sv-ranking.scss
+++ b/packages/survey-core/src/common-styles/sv-ranking.scss
@@ -128,7 +128,8 @@
   padding-top: calcSize(1);
   padding-bottom: calcSize(1);
 
-  .sv-string-viewer {
+  .sv-string-viewer,
+  .sv-string-editor {
     overflow: initial;
     white-space: pre-line;
   }
