--- a/packages/survey-core/src/common-styles/sv-ranking.scss
+++ b/packages/survey-core/src/common-styles/sv-ranking.scss
@@ -179,7 +179,8 @@
 .sv-ranking-item--ghost {
   height: calcSize(6);
 
-  .sv-ranking-item__text .sv-string-viewer {
+  .sv-ranking-item__text .sv-string-viewer,
+  .sv-ranking-item__text .sv-string-editor {
     white-space: unset;
   }
 }
@@ -283,7 +284,9 @@
     height: calcSize(6);
 
     .sv-ranking-item__text {
-      .sv-string-viewer {
+
+      .sv-string-viewer,
+      .sv-string-editor {
         overflow: hidden;
         white-space: nowrap;
       }
