work for textarea component enhancement

--- a/packages/survey-angular-ui/src/components/text-area/text-area.component.html
+++ b/packages/survey-angular-ui/src/components/text-area/text-area.component.html
@@ -10,7 +10,8 @@
 [value]="value"
 (input)="model.onTextAreaInput($event)"
 (keydown)="model.onTextAreaKeyDown($event)"
-(blur)="model.onTextAreaChange($event)"
+(focus)="model.onTextAreaFocus($event)"
+(blur)="model.onTextAreaBlur($event)"
 (change)="model.onTextAreaChange($event)"
 [attr.aria-required]="model.ariaRequired"
 [attr.aria-label]="model.ariaLabel"
