--- a/src/knockout/components/text-area/text-area.html
+++ b/src/knockout/components/text-area/text-area.html
@@ -15,7 +15,8 @@
     'aria-errormessage': $data.model.ariaErrormessage
   }, 
   event: { 
-    blur: function(s, e) { $data.model.onTextAreaChange(e); },
+    focus: function(s, e) { $data.model.onTextAreaFocus(e); return true; }, 
+    blur: function(s, e) { $data.model.onTextAreaBlur(e); return true; },
     input: function(s, e) { $data.model.onTextAreaInput(e); },
     keydown: function(s, e) { $data.model.onTextAreaKeyDown(e); return true; }
   }, 
