Implemented #8663 - There is no way to handle the window closing in Popup Survey right now - added onPopupClosed handler option

--- a/packages/survey-angular-ui/src/popup.survey.component.html
+++ b/packages/survey-angular-ui/src/popup.survey.component.html
@@ -15,7 +15,7 @@
             <svg *ngIf="popup.isCollapsed" [iconName]="'icon-restore_16x16'" [size]="16" sv-ng-svg-icon></svg>
         </div>
 
-        <div *ngIf="popup.allowClose" [class]="popup.cssHeaderCloseButton" (click)="popup.hide()">
+        <div *ngIf="popup.allowClose" [class]="popup.cssHeaderCloseButton" (click)="closeHandler()">
           <svg [iconName]="'icon-close_16x16'" [size]="16" sv-ng-svg-icon></svg>
         </div>
       </div>
