--- a/packages/survey-core/src/defaultV2-theme/blocks/sd-dropdown.scss
+++ b/packages/survey-core/src/defaultV2-theme/blocks/sd-dropdown.scss
@@ -204,7 +204,7 @@
   }
 }
 
-.sv-dropdown-popup.sv-single-select-list.sv-popup--animate-leave {
+.sv-dropdown-popup.sv-single-select-list.sv-popup--leave {
   .sd-list__item.sv-list__item--selected {
     .sv-list__item-body {
       font-weight: normal;
