--- a/packages/survey-core/src/defaultV2-theme/blocks/sd-table.scss
+++ b/packages/survey-core/src/defaultV2-theme/blocks/sd-table.scss
@@ -288,13 +288,13 @@
 }
 
 .sd-table__cell--footer {
-  text-align: right;
+  text-align: end;
   padding-top: calcSize(1);
 }
 
 .sd-table__cell--footer-total {
   font-weight: 600;
-  text-align: left;
+  text-align: start;
 }
 
 .sd-table__cell--detail-panel {
@@ -358,7 +358,7 @@
 .sd-table__cell--row-text {
   font-weight: $font-questiontitle-weight;
   color: $font-questiontitle-color;
-  text-align: left;
+  text-align: start;
   min-width: calcSize(12);
   padding: calcSize(1.5) calcSize(1);
 }
@@ -541,7 +541,7 @@
 
     .sd-matrix__responsive-title {
       margin-left: calcSize(1);
-      text-align: left;
+      text-align: start;
     }
 
     &:first-of-type {
@@ -642,7 +642,7 @@
     display: block;
     padding-top: 0;
     padding-bottom: 0;
-    text-align: left;
+    text-align: start;
   }
 
   .sd-table__cell {
@@ -672,7 +672,7 @@
     padding-bottom: calcSize(1);
     font-weight: 600;
     display: block;
-    text-align: left;
+    text-align: start;
     .sv-string-viewer {
       white-space: normal;
     }
