--- a/packages/survey-core/src/defaultV2-theme/defaultV2.m600.scss
+++ b/packages/survey-core/src/defaultV2-theme/defaultV2.m600.scss
@@ -29,7 +29,7 @@
       min-width: 100%;
     }
 
-    @include table_responsive();
+    // @include table_responsive();
     @include ranking_responsive();
   }
 }
