--- a/packages/survey-core/src/defaultV2-theme/blocks/animations.scss
+++ b/packages/survey-core/src/defaultV2-theme/blocks/animations.scss
@@ -44,7 +44,7 @@
     padding-bottom: var(--animation-padding-bottom);
     border-top-width: var(--animation-border-top-width);
     border-bottom-width: var(--animation-border-bottom-width);
-    height: var(--animation-height);
+    height: var(--animation-height-to);
   }
 }
 @keyframes moveIn {
