#8666 Make it possible to show required error for empty tagbox Fixes #8666

--- a/packages/survey-angular-ui/src/components/tagbox/tagbox-filter.component.html
+++ b/packages/survey-angular-ui/src/components/tagbox/tagbox-filter.component.html
@@ -27,8 +27,8 @@
       [attr.aria-activedescendant]="model.ariaActivedescendant"
       [attr.placeholder]="model.filterStringPlaceholder"
       (keydown)="model.inputKeyHandler($event)"
-      (blur)="model.onBlur($event)"
-      (focus)="model.onFocus($event)"
+      (blur)="question.onBlur($event)"
+      (focus)="question.onFocus($event)"
     />
     </div>
   </div>
