--- a/src/knockout/components/title/title-content.html
+++ b/src/knockout/components/title/title-content.html
@@ -10,7 +10,7 @@
   <!-- ko if: element.no -->
   <span
     style="position: static;"
-    data-bind="css: element.cssClasses.number || (element.cssClasses.panel && element.cssClasses.panel.number), text: element.no, attr: { 'aria-hidden': true }"
+    data-bind="css: element.cssTitleNumber, text: element.no, attr: { 'aria-hidden': true }"
   ></span>
   <span>&nbsp</span>
   <!-- /ko -->
